# invokeai-vllm-omni-bridge

./: Containerfile  README.md  pyproject.toml
charts/invokeai-omni/: Chart.yaml  values.yaml
charts/invokeai-omni/templates/: _helpers.tpl  invokeai-deployment.yaml  vllm-omni-isvc.yaml
invokeai_omni_nodes/: __init__.py  config.py  nodes_audio.py  nodes_text.py  nodes_vision.py
tests/: conftest.py  test_client.py  test_nodes.py  test_serializers.py
vllm_client/: __init__.py  client.py  serializers.py
