[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invokeai-vllm-omni-bridge"
version = "0.1.0"
description = "InvokeAI custom nodes and client library for vLLM-Omni multimodal inference"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Stjepan" },
]
keywords = ["invokeai", "vllm", "multimodal", "generative-ai", "nodes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["invokeai_omni_nodes*", "vllm_client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
